objects/LBI__ModelFieldMappingStage__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIDataType__c</fullName>
        <label>API Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIDisplayName__c</fullName>
        <label>API Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIIsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__APIName__c</fullName>
        <label>API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalID__c</fullName>
        <description>This field is to facilitate upserts</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__ModelStage__c</fullName>
        <label>Lattice Model Stage</label>
        <referenceTo>LBI__ModelStage__c</referenceTo>
        <relationshipLabel>Lattice Model Field Mapping Stages</relationshipLabel>
        <relationshipName>LatticeModelFieldMappingStages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Lattice Model Field Mapping Stage</label>
    <nameField>
        <displayFormat>MFMS-{000000000}</displayFormat>
        <label>Lattice Model Field Mapping Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Model Field Mapping Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>